# git-issues

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  gh_issues.csv  issue_duration.sql  issues.ipynb  main.py
